BEE-1 create partition pod request added
